// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Form/Button alignment 1`] = `
<div
  class="css-1mvfu07-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-h3sobf-Button e1lk8yn73"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-f5ome0-Button e1lk8yn73"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-4ds05y-Button e1lk8yn73"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button sizes 1`] = `
<div
  class="css-1mvfu07-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-1pzmux7-Button e1lk8yn73"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-1hyuh0l-Button e1lk8yn73"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-4ds05y-Button e1lk8yn73"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button validations 1`] = `
<div
  class="css-1mvfu07-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-wvpv7w-Button e1lk8yn73"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-1g2cn2b-Button e1lk8yn73"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-c7m30k-Button e1lk8yn73"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-4ds05y-Button e1lk8yn73"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button with knobs 1`] = `
<button
  class="css-1pzmux7-Button e1lk8yn73"
>
  💌  love letter to storybook team
</button>
`;

exports[`Storyshots Components|Form/Select sizes 1`] = `
<div
  class="css-1mvfu07-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <select
      class="css-bsjfx3-Select e1lk8yn71"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <select
      class="css-1mq6ser-Select e1lk8yn71"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <select
      class="css-170lhp0-Select e1lk8yn71"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Select validations 1`] = `
<div
  class="css-1mvfu07-Container ecq4n7c0"
>
  <select
    class="css-hxwf21-Select e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-1pbuugy-Select e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-p4579u-Select e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-170lhp0-Select e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</div>
`;

exports[`Storyshots Components|Form/Textarea alignment 1`] = `
<div
  class="css-1mvfu07-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      align="end"
      class="css-ok7c03-Textarea e1lk8yn72"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      align="center"
      class="css-djty3k-Textarea e1lk8yn72"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      align="start"
      class="css-pul98m-Textarea e1lk8yn72"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea sizes 1`] = `
<div
  class="css-1mvfu07-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-fpmx1h-Textarea e1lk8yn72"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-5rqdpj-Textarea e1lk8yn72"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-pul98m-Textarea e1lk8yn72"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea validations 1`] = `
<div
  class="css-1mvfu07-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-vcj5vs-Textarea e1lk8yn72"
      style="height:0"
      valid="error"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-1orv7tn-Textarea e1lk8yn72"
      style="height:0"
      valid="warn"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-1gb1gub-Textarea e1lk8yn72"
      style="height:0"
      valid="valid"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-pul98m-Textarea e1lk8yn72"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea with knobs (controlled) 1`] = `
<textarea
  class="css-pul98m-Textarea e1lk8yn72"
  style="height:0"
>
  OMG, multiple lines!

That is amazing
</textarea>
`;
